package questions.QList.ElevatorSystem.first;

public enum ButtonType {
    INTERNAL, EXTERNAL_UP, EXTERNAL_DOWN
}