package questions.QList.ElevatorSystem.first;

public enum Direction {
    UP, DOWN, IDLE
}
