package questions.QList.ElevatorSystem.first;

public enum State {
    MOVING, STOPPED, DOOR_OPEN, DOOR_CLOSED, MAINTENANCE
}